--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ a[href^="tel:"] {
 }
 
 body {
-	position: relative;
-    background-color: #4a4a4a;
-    color: #878787;
-    font: 14px/20px 'Open Sans', sans-serif;
+  background-color: #4a4a4a;
+  color: #878787;
+  font: 14px/20px 'Open Sans', sans-serif;
+  min-width: 1200px;
 }
 
 .ic {
@@ -270,6 +270,7 @@ a:hover {
 
 .main {
     background-color: #fff;
+    min-width: 1300px;
 }
 
 header {
@@ -278,7 +279,7 @@ header {
 
 
 header h1 {
-	position: relative;
+	
 	text-align: center;
     padding-top: 55px;
 }
